--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -132,6 +132,20 @@ h1 {
 	font-weight: bold !important;
 }
 
+.ic_down {
+	background: transparent url('~assets/images/ic_down.svg') center center no-repeat;
+	width: 12px;
+	height: 12px;
+	display: inline-flex;
+}
+.ic_up {
+	background: transparent url('~assets/images/ic_up.svg') center center no-repeat;
+	width: 12px;
+	height: 12px;
+	display: inline-flex;
+
+}
+
 .button_link {
 	display: block;
 	min-width: 120px;
@@ -252,7 +266,7 @@ h1 {
 		position: absolute;
 		top: 0;
 		right: 0;
-    	&:focus {
+		&:focus {
 			outline: none;
 		}
 	}
@@ -434,6 +448,11 @@ h1 {
 				font-size: 16px;
 				line-height: 20px;
 				font-weight: bold;
+			}
+			.post_votes {
+				.ic_up, .ic_down {
+					margin-right: 4px;
+				}
 			}
 		}
 
@@ -619,8 +638,55 @@ h1 {
 	}
 	.tools {
 		margin: 24px 32px 0 24px;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content:space-between;
+		.vote_up, .vote_down {
+			padding: 0 24px;
+			height: 48px;	
+			width: 110px;	
+			border: 1px solid $border-bold-color;
+			flex-shrink: 0;
+			background: none;
+			cursor: pointer;
+			color: $up-value-color;
+			font-size: 14px;
+			display: flex;
+			justify-content:space-between;
+
+			&:hover {
+				border: 1px solid $up-value-color;
+				background-color: lighten($up-value-color, 45%);
+				transition: background-color 0.2s ease-in-out;
+			}
+			&:focus {
+				outline: none;
+			}
+			.votes_count {
+				display: inline-flex;
+				line-height: 14px;
+			}
+
+		}
+		.vote_down {
+			margin-left: 8px;
+			color: $down-value-color;
+			&:hover {
+				border: 1px solid $down-value-color;
+				background-color: lighten($down-value-color, 25%);
+				transition: background-color 0.2s ease-in-out;
+			}
+
+		}
+		.social {
+			flex-grow: 1;
+			min-width: 200px;
+			margin: 24px 0 0 0;
+			text-align: center;
+
+		}
 	}
-	.ff_post_tabs{
+	.ff_post_tabs {
 		display: block;
 		list-style: none;
 		margin: 0;
@@ -644,6 +710,7 @@ h1 {
 			}
 		}
 	}
+
 
 }
 
@@ -673,6 +740,13 @@ h1 {
 		}
 		.ff_post_tabs{
 			display: none;
+		}
+		.tools {
+			margin: 24px 0 0 0;
+			.social {
+				margin: 0 0 0 0;
+				text-align: right;
+			}
 		}
 	}
 }
