стиль анкорной ссылки

--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -638,7 +638,12 @@ h1 {
 		img {
 			width: 100%;
 		}
+		a {
+			text-decoration: underline;
+		}
 	}
+
+
 	.post_source {
 		margin: 24px 32px 0 24px;
 	}
