--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -530,29 +530,71 @@ h1 {
 			margin: 0;
 			padding: 0; 
 		}
-		.dropdown-menu {
-			left: auto !important;
-			right: 0 !important;
-			display: block;
+		.dropdown_menu {
+			position: absolute;
+			top: 100%;
+			z-index: 1000;
+			left: auto;
+			right: 0;
+			padding: 5px 0;
+			margin: 2px 0 0;
+			background-color: $bg-main-color;
+			border: 1px solid $border-bold-color;
+			box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+			background-clip: padding-box;
+			> li {
+				overflow: hidden;
+				width: 100%;
+				position: relative;
+				margin: 0;
+				> a {
+					padding: 10px 30px;
+					display: block;
+					font-weight: normal;
+					line-height: 1.6;
+					white-space: nowrap;
+					text-decoration: none;
+					text-transform: uppercase;
+					font-size: $label-size;
+					&:hover {
+						background: $border-thin-color;
+					}
+				}
+			}
 		}
-		.dropdown-toggle {
-			height: 56px !important;
+		.dropdown_toggle {
+			height: 56px;
 			line-height: 56px;
-			text-align: right;
-			background: none !important;
-			color: $dark-primary-color !important;
-			text-transform: uppercase !important;
-			font-weight: bold !important;
+			color: $dark-primary-color;
+			text-transform: uppercase;
+			font-weight: bold;
 			font-size: $label-size;
+			cursor: pointer;
+			&::after {
+				display: none;
+			}
 		}
-		.dropdown-toggle::after {
-			display: none;
-		}
+
 		.caret {
-			top: 25px !important;
-			margin-left: 13px !important;
+			top: 25px;
+			margin-left: 13px;
+			display: relative;
+			width: 0;
+			position: relative;
+			height: 0;
+			vertical-align: middle;
+			border-top: 4px dashed;
+			border-top: 4px solid \9;
+			border-right: 4px solid transparent;
+			border-left: 4px solid transparent;
+			float: right;
 		}
 	}
+
+
+
+
+
 }
 @media (max-width: 769px) {
 	.news_filters_block {
@@ -561,8 +603,8 @@ h1 {
 		.btn-group {
 			height: 48px !important;
 			line-height: 48px;
-			.dropdown-toggle {
-				height: 48px !important;
+			.dropdown_toggle {
+				height: 48px;
 				line-height: 48px;
 			}
 			.caret {
