--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -518,6 +518,89 @@ h3 {
 	}
 }
 
+
+/* coins block page */
+.ff_coin_page {
+	.currency {
+		padding: 0px 0px 0px 24px;
+		height: 56px;
+		border-bottom: 1px solid $border-thin-color;
+		box-shadow: 0 5px 30px rgba($bg-toolbar-color, .0);
+		transition: box-shadow 0.1s ease-in-out;
+		position: relative;
+		border-bottom: 1px solid $border-thin-color;
+		color: $dark-primary-color;
+		font-size: $second_size;
+		line-height: 56px;
+		&.nuxt-link-active {
+			.i_symbol {
+				color: $link-color;
+				transition: color 0.1s ease-in-out;
+			}
+		}
+	}
+	.currency:hover:not(.nuxt-link-active) {
+		box-shadow: 0 5px 30px rgba($bg-toolbar-color, .15);
+		.i_symbol {
+			color: $dark-primary-color;
+		}
+	}
+	.coin_row {
+		display: flex;
+		.coin_details_item {
+			flex-grow: 1;
+			flex-basis: 100%;
+			overflow: hidden;
+		}
+		.coin_details_item.change {
+			color: $up-value-color;
+			font-weight: bold;
+		}
+		.i_symbol {
+			color: $l-color;
+		}
+		.i_cap, .i_volume, .i_sup {
+			flex-basis: 200%;
+		}
+	}
+	.coin_header {
+		border-bottom: 1px solid $border-bold-color;
+		color: $label-color;
+		font-size: $label-size;
+		height: 36px;
+		padding-left: 24px;
+
+
+		display: flex;
+		.coin_details_head {
+			flex-grow: 1;
+			line-height: 36px;
+			flex-basis: 100%;
+			overflow: hidden;
+		}
+		.i_cap, .i_volume, .i_sup {
+			flex-basis: 200%;
+		}
+	}
+}
+@media (max-width: 769px) {
+	.ff_coin_page {
+		.coin_row {
+			.i_cap, .i_volume, .i_sup {
+				display: none;
+			}
+		}
+		.coin_header {
+			.i_cap, .i_volume, .i_sup {
+				display: none;
+			}
+		}
+	}
+}
+
+
+
+
 /* news block */
 .ff-news {
 	padding-bottom: 200px;
@@ -1398,6 +1481,7 @@ h3 {
 		margin:0;
 		padding: 0;
 		line-height: 24px;
+		vertical-align: top;
 
 	}
 	dd {
