--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -521,14 +521,28 @@ h3 {
 			}
 		}
 		.coin_header {
+			padding: 0 12px;
+			height: 56px;
 			.coin_details_head {
 				display: none;
 				&.i_symbol {
 					display: block;
-					text-align: right;
 					padding-right: 10px;
 					font-size: $second_size;
+					a {
+						display: block;
+						line-height: 56px;
+						height: 56px;
+					}
 				}
+			}
+		}
+		.coin_header:hover {
+
+			cursor: pointer;
+			box-shadow: 0 5px 30px rgba($bg-toolbar-color, .15);
+			a {
+				color: $link-color;
 			}
 		}
 	}
