--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -207,9 +207,6 @@ h3 {
 					display: flex;
 					flex-direction: column;
 					background-color: $bg-main-color;
-					&.active_market_cup {
-						display: none;
-					}
 				}
 				.ff-right-panel {
 					display: flex;
@@ -232,6 +229,9 @@ h3 {
 						right: 0;
 						left: 0;
 						overflow-y: scroll;
+					}
+					&.fade_for_redirect {
+						opacity: 0;
 					}
 				}
 			}
@@ -288,6 +288,19 @@ h3 {
 }
 
 /************ INDEX BLOCKS ************/
+
+.ff-left-panel {
+	&.fade-enter-active {
+		transition: all 0.1s ease;
+	}
+	&.fade-leave-active {
+		transition: all 0.1s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+	}
+	&.fade-enter, &.fade-leave-to {
+		transform: translateX(-10px);
+		opacity: 0
+	}
+}
 
 .ff_center_panel {
 	background-color: $bg-main-color;
