--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -66,7 +66,6 @@ h3 {
 	h1 {
 		font-size: 24px;
 	}
-
 	h2 {
 		font-size: 18px;
 	}
@@ -512,6 +511,55 @@ h3 {
 
 @media (min-width: 768px) {
 	.ff_coin_index { 
+		.coin_tooltip {
+			position: absolute;
+			top: 0;
+			left: 110%;
+			z-index: 1;
+			background-color: $bg-main-color;
+			border: 1px solid $border-bold-color;
+			font-size: $second_size;
+			width: fit-content;
+			word-wrap: normal;
+			white-space: nowrap;
+			padding: 6px 12px;
+			box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
+			transition: top 0.2s ease;
+			&.tooltip-enter-active {
+				transition: all 0.1s ease;
+			}
+			&.tooltip-leave-active {
+				transition: all 0.1s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+			}
+			&.tooltip-enter, &.tooltip-leave-to {
+				transform: translateX(-10px);
+				opacity: 0
+			}
+		}
+
+		.coin_tooltip:before {
+			content: '';
+			display: block;  
+			position: absolute;
+			left: -10px;
+			top: -1px;
+			width: 0;
+			height: 0;
+  			border-bottom: 10px solid transparent; 
+			border-right: 10px solid $border-bold-color; 
+		}
+
+		.coin_tooltip:after {
+			content: '';
+			display: block;  
+			position: absolute;
+			left: -8px;
+			top: 0px;
+			width: 0;
+			height: 0;
+  			border-bottom: 10px solid transparent; 
+  			border-right: 10px solid white; 
+		}
 		.currency {
 			padding: 8px 12px;
 			height: auto;
@@ -652,7 +700,6 @@ h3 {
 
 
 
-
 /* news block */
 .ff-news {
 	padding-bottom: 200px;
@@ -673,7 +720,6 @@ h3 {
 		}
 	}
 	.ff-news-row {
-		box-shadow: 0 5px 30px rgba($bg-toolbar-color, .0);
 		transition: box-shadow 0.1s ease-in-out;
 		position: relative;
 		display: block;
@@ -807,11 +853,6 @@ h3 {
 			float: right;
 		}
 	}
-
-
-
-
-
 }
 @media (max-width: 769px) {
 	.news_filters_block {
@@ -831,6 +872,8 @@ h3 {
 	}
 }
 
+
+
 /* footer block */
 .ff-footer {
 	padding-left: 24px;
@@ -839,6 +882,9 @@ h3 {
 		line-height: 48px;
 	}
 }
+
+
+
 
 /* social block */
 .social {
@@ -1092,9 +1138,6 @@ h3 {
 		margin-top: 4px;
 		font-size: 12px;
 	}
-	.ff_coin_tabs {
-		display: none;
-	}
 
 	&.page-enter-active, &.page-leave-active {
 		transition: opacity .2s
@@ -1103,9 +1146,148 @@ h3 {
 	&.page-enter, &.page-leave-active, &.page-leave {
 		opacity: 0.5
 	}
+
+	.vue-highcharts {
+		margin-top: 10px;
+		width: 100%;
+		.highcharts-background {
+			fill: $bg-coin-color;
+		}
+
+		.highcharts-plot-background {
+			fill: $bg-coin-color;
+		}
+		/*.highcharts-plot-border {
+			stroke: $border-bold-color;
+			stroke-width: 1px;
+		}
+		*/
+		.highcharts-area {
+			opacity: 0.9;
+			fill: $bg-main-color;
+		}
+
+		.highcharts-graph {
+			stroke: $link-color;
+		}
+
+		.highcharts-xaxis-grid .highcharts-grid-line,
+		.highcharts-xaxis .highcharts-tick,
+		.highcharts-yaxis-grid .highcharts-grid-line,
+		.highcharts-yaxis .highcharts-tick {
+			stroke-width: 1px;
+			stroke: $border-thin-color;
+		}
+
+		.highcharts-minor-grid-line {
+		    stroke: transparent;
+		}
+		.highcharts-crosshair-thin {
+		    stroke-width: 1px;
+		    stroke: $dark-primary-color;
+		}
+		.highcharts-markers {
+		    stroke-width: 1px;
+		    opacity: 1;
+		    stroke: $dark-primary-color;
+		    fill: $dark-primary-color;
+		}
+
+
+		.highcharts-graph {
+			stroke-width: 2px;
+		}
+
+		.highcharts-tooltip-box .highcharts-label-box {
+		    fill: $dark-primary-color;
+		    stroke: $dark-primary-color;
+		}
+		.highcharts-credits{
+			display: none !important;
+		}
+	}
+
+	.wiki_row {
+		.wiki_item {
+			padding: 16px;
+			p {
+				margin: 0;
+			}
+			.wiki_title {
+				color: $dark-primary-color;
+				font-size: $block-title-size;
+				line-height: 16px;
+				font-weight: bold;
+			}
+			.wiki_description {
+				@extend .ff-label;
+				margin-top: 12px;
+			}
+		}
+		.wiki_item:hover {
+			box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
+			background-color: $bg-main-color;
+		}
+	}
+
+	.ff_pairs_index {
+		border: 1px solid $border-bold-color;
+		width: 100%;
+		background-color: $bg-main-color;
+		font-size: $label-size;
+
+		.ff_pairs_header {
+			border-bottom: 1px solid $border-bold-color;
+			display: flex;
+			flex-direction: row;
+			.ff_pairs_head {
+				width: 0;
+				cursor: default;
+				flex: 1;
+				padding: 2px 12px;
+
+			}
+		}
+		.ff_pair {
+			display: flex;
+			flex-direction: row;
+			.ff_pair_item {
+				width: 0;
+				cursor: default;
+				flex: 1;
+				padding: 2px 12px;
+
+			}
+		}
+
+		.ff_pair:hover {
+			background-color: $bg-coin-color;
+		}
+	}
+
+	.coin_stat {
+		width: 100%;
+		dt, dd {
+			@extend .ff-label;
+			display: inline-block;
+			width: 50%;
+			border-top: 1px solid $border-bold-color;
+			margin:0;
+			padding: 0;
+			line-height: 24px;
+			vertical-align: top;
+
+		}
+		dd {
+			color: $dark-primary-color;
+			font-weight: bold;
+		}
+	}
+
+
 }
 @media (max-width: 769px) { 
-	.ff_coin{
+	.ff_coin {
 		.coin_detail_unit {
 			margin: 10px 0;
 			.coin-detail {
@@ -1122,27 +1304,26 @@ h3 {
 			color: $dark-primary-color;
 			font-size:14px;
 		}
-		.ff_coin_tabs{
-			display: block;
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			font-size: $coin-info-size;
-			height: 48px;
-			border-bottom: 1px solid $border-bold-color;
-			border-left: 1px solid $border-thin-color;
-			background-color: $bg-coin-color;
-			li {
-				margin: 0;
-				display: inline-block;
-				padding: 0 0px 0 24px;
-				span {
-					line-height: 48px;
-					display: inline-block;
-		    		height: 48px;
+
+		.ff_pairs_index {
+			.ff_pairs_header {
+				.ff_pairs_head {
+					&.i_high, &.i_low {
+						display: none;
+					}
+					&.i_price {
+						flex-grow: 1.3;
+					}
 				}
-				.active_tab {
-					border-bottom: 2px solid $bg-toolbar-color;
+			}
+			.ff_pair {
+				.ff_pair_item {
+					&.i_high, &.i_low {
+						display: none;
+					}
+					&.i_price {
+						flex-grow: 1.3;
+					}
 				}
 			}
 		}
@@ -1398,195 +1579,6 @@ h3 {
 	}
 	.button_link{
 		margin-top: 24px;
-	}
-}
-
-.vue-highcharts {
-	margin-top: 10px;
-	width: 100%;
-	.highcharts-background {
-		fill: $bg-coin-color;
-	}
-
-	.highcharts-plot-background {
-		fill: $bg-coin-color;
-	}
-	/*.highcharts-plot-border {
-		stroke: $border-bold-color;
-		stroke-width: 1px;
-	}
-	*/
-	.highcharts-area {
-		opacity: 0.9;
-		fill: $bg-main-color;
-	}
-
-	.highcharts-graph {
-		stroke: $link-color;
-	}
-
-	.highcharts-xaxis-grid .highcharts-grid-line,
-	.highcharts-xaxis .highcharts-tick,
-	.highcharts-yaxis-grid .highcharts-grid-line,
-	.highcharts-yaxis .highcharts-tick {
-		stroke-width: 1px;
-		stroke: $border-thin-color;
-	}
-
-	.highcharts-minor-grid-line {
-	    stroke: transparent;
-	}
-	.highcharts-crosshair-thin {
-	    stroke-width: 1px;
-	    stroke: $dark-primary-color;
-	}
-	.highcharts-markers {
-	    stroke-width: 1px;
-	    opacity: 1;
-	    stroke: $dark-primary-color;
-	    fill: $dark-primary-color;
-	}
-
-
-	.highcharts-graph {
-		stroke-width: 2px;
-	}
-
-	.highcharts-tooltip-box .highcharts-label-box {
-	    fill: $dark-primary-color;
-	    stroke: $dark-primary-color;
-	}
-	.highcharts-credits{
-		display: none !important;
-	}
-}
-
-
-
-.wiki_row {
-	.wiki_item {
-		padding: 16px;
-		p {
-			margin: 0;
-		}
-		.wiki_title {
-			color: $dark-primary-color;
-			font-size: $block-title-size;
-			line-height: 16px;
-			font-weight: bold;
-		}
-		.wiki_description {
-			@extend .ff-label;
-			margin-top: 12px;
-		}
-	}
-	.wiki_item:hover {
-		box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
-		background-color: $bg-main-color;
-	}
-}
-
-.ff_pairs_index {
-	border: 1px solid $border-bold-color;
-	width: 100%;
-	background-color: $bg-main-color;
-	font-size: $label-size;
-
-	.ff_pairs_header {
-		border-bottom: 1px solid $border-bold-color;
-		display: flex;
-		flex-direction: row;
-		.ff_pairs_head {
-			cursor: default;
-			flex: 1;
-			padding: 2px 12px;
-			&.changes {
-				flex-grow: 1.5;
-			}
-		}
-	}
-	.ff_pair {
-		display: flex;
-		flex-direction: row;
-		.ff_pair_item {
-			cursor: default;
-			flex: 1;
-			padding: 2px 12px;
-			&.changes {
-				flex-grow: 1.5;
-			}
-		}
-	}
-
-	.ff_pair:hover {
-		background-color: $bg-coin-color;
-	}
-}
-@media (max-width: 769px) {
-	.ff_pairs_index {
-		.ff_pairs_header {
-
-			.ff_pairs_head {
-					&.i_high, &.i_low {
-						display: none;
-					}
-					&.changes {
-						flex-grow: 1;
-					}
-					&.i_price {
-						flex-grow: 1.5;
-					}
-					&.i_volume {
-						flex-grow: 1.5;
-					}
-			}
-		}
-		.ff_pair {
-			.ff_pair_item {
-				&.i_high, &.i_low {
-					display: none;
-				}
-				.changes {
-					flex-grow: 1;
-				}
-				&.i_price {
-					flex-grow: 1.5;
-				}
-				&.i_volume {
-					flex-grow: 1.5;
-					.unit {
-						display: none;
-					}
-				}
-			}
-		}
-	}
-
-	.ff_coin {
-		.row.pairs_row {
-			padding: 0 !important;
-		}
-	}
-}
-
-
-
-.coin_stat {
-	width: 100%;
-	dt, dd {
-		@extend .ff-label;
-		display: inline-block;
-		width: 50%;
-		border-top: 1px solid $border-bold-color;
-		margin:0;
-		padding: 0;
-		line-height: 24px;
-		vertical-align: top;
-
-	}
-	dd {
-		color: $dark-primary-color;
-		font-weight: bold;
 	}
 }
 
