--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -507,6 +507,9 @@ h3 {
 			}
 		}
 	}
+	.coin_tooltip {
+		display: none;
+	}
 }
 
 @media (min-width: 768px) {
@@ -519,7 +522,6 @@ h3 {
 			background-color: $bg-main-color;
 			border: 1px solid $border-bold-color;
 			font-size: $second_size;
-			width: fit-content;
 			word-wrap: normal;
 			white-space: nowrap;
 			padding: 6px 12px;
