--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -1678,12 +1678,24 @@ h3 {
 			text-transform: uppercase;
 			font-weight: bold;
 			line-height: 12px;
-			padding: 12px 0 0 8px;
+			padding: 12px 0 0 0px;
+			margin: 0 12px;
+			height: 32px;
+			background-image: url('~/assets/images/baseline-compare_arrows-24px.svg');
+			background-repeat: no-repeat;
+			background-position: 100% 100%;
+			img {
+				margin-right: 8px;
+			}
+			.label_currency {
+				vertical-align: top;
+    			line-height: 20px;
+			}
+
 		}
 		input {
 			border: none;
-/*			height: 48px; */
-			padding: 8px 12px 12px 12px;
+			padding: 4px 12px 12px 12px;
 			display: inline-block;
 			font-size: $h2-size;
 			line-height: 32px;
@@ -1706,6 +1718,10 @@ h3 {
     		padding: 12px;
     		font-size: $block-title-size;
     		line-height: 20px;
+    		.apply {
+    			flex-grow: 1;
+    			margin-bottom: 2px;
+    		}
 		}
 		a:hover {
 			background-color: lighten($up-value-color, 3%);
