--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -619,7 +619,7 @@ h3 {
 }
 
 @media (max-width: 769px) {
-	.ff_coin_index {
+	.ff_coin_list {
 		.coin_row {
 			.i_price {
 				text-align: right;
