--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -7,6 +7,7 @@ $font-stack: 'IBM Plex Sans', serif;
 
 $primary-color: #333;
 $dark-primary-color: #000;
+$post-top-color: #fff;
 $label-size: 12px;
 $coin-info-size: 14px;
 $block-title-size: 16px;
@@ -787,6 +788,7 @@ h3 {
 .ff-news {
 	padding-bottom: 200px;
 	.news_list_detail {
+		@extend .ff-label;
 		list-style: none;
 		margin: 8px 0 0 0;
 		padding: 0;
@@ -823,6 +825,50 @@ h3 {
 				}
 			}
 
+			&.top_post_item {
+				overflow: hidden;
+				min-height: 150px;
+				display: flex;
+				flex-direction: column;
+				color: $post-top-color;
+				text-shadow: 0px 0px 3px $dark-primary-color;
+				.top_post_background {
+					background-repeat: no-repeat;
+					background-position: 50% 50%;
+					background-size: cover;
+					position: absolute;
+					z-index: 0;
+					left:0;
+					right: 0;
+					bottom: 0;
+					top: 0;
+				}
+
+				.post_fade_overlay {
+					position: absolute;
+					z-index: 1;
+					top:0;
+					left:0;
+					right: 0;
+					bottom: 0;
+					background-color: $dark-primary-color;
+					opacity: 0.5;
+				}
+				.ff_news_item_title {
+					flex: 1;
+					z-index: 2;
+					position: relative;
+				}
+				.ff_news_item_details {
+					z-index: 2;
+					position: relative;
+				}
+				.news_list_detail {
+					color: $post-top-color;
+				}
+
+			}
+
 		}
 		&.nuxt-link-active {
 			.ff-nc-title  {
@@ -850,9 +896,14 @@ h3 {
 	}
 	.ff-news-row:hover {
 		box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
-	}
-	.ff-news-row:hover {
 		color: $dark-primary-color;
+		.ff-news-cell {
+			&.top_post_item {
+				.post_fade_overlay {
+					opacity: 0.3;
+				}
+			}
+		}
 	}
 }
 
